tests/ui/form_data_union.rs
use gotham_formdata::FormData;
use validator::Validate;

#[derive(FormData, Validate)]
union MyFormData {
	foo: u8,
	bar: i8
}

fn main() {}
